Added rounded profile picture, heart icon next to likes updated launch icon and UI elements

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@ android {
 }
 
 dependencies {
+    //Rounded Image View
+    compile 'com.makeramen:roundedimageview:1.5.0'
     //Load remote images from the network into image views
     compile 'com.squareup.picasso:picasso:2.5.0'
     //Sends network request for JSON
